# pretix-plugin-revolut

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
revolut/: apps.py  payment.py  signals.py  urls.py  views.py
revolut/locale/de/LC_MESSAGES/: django.po
revolut/locale/de_Informal/LC_MESSAGES/: django.po
