[project]
name = "revolut"
dynamic = ["version"]
description = "Integrates Revolut Merchant API to you pretix sinstallation"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Matej Kravjar", email = "matej.kravjar@gmail.com"},
]
maintainers = [
    {name = "Matej Kravjar", email = "matej.kravjar@gmail.com"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
revolut = "revolut:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "GitHub repository URL"
repository = "GitHub repository URL"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "revolut.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
